--- a/Case_Dataset.html
+++ b/Case_Dataset.html
@@ -1,1 +1,1 @@
-<iframe src="https://onedrive.live.com/redir?resid=142E00AB7215E1CF%21317&authkey=%21AO-28J608ImVBms&page=View" width="100%" height="600"></iframe>
+<iframe src="https://onedrive.live.com/View.aspx?resid=142E00AB7215E1CF!317&authkey=!AO-28J608ImVBms" width="100%" height="600"></iframe>
